--- a/Day6/dat6.html
+++ b/Day6/dat6.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-     <title>Day 6 table</title>
+     <title>Table</title>
      <style>
-     table, td {
-        border: 1px dotted black;
+     table,td {
+        border: 1px solid black;
         border-collapse: collapse;
         color: blue;
      }   
