--- a/Priya/Day4.html
+++ b/Priya/Day4.html
@@ -4,14 +4,14 @@
         <title>Irise home page</title>
         </head>
         <body>
-            <h1>welcome to Irise defult css - font - size - 18 font-weight - bold  </h1>
+            <h1>welcome to Irise default css - font - size - 18 font-weight - bold  </h1>
             <h2>welcome to Irise defult css - font - size - 16 font-weight - bold </h2>
             <h3>welcome to Irise defult css - font - size - 14 font-weight - bold </h3>
             <h4>welcome to Irise defult css - font - size - 12 font-weight - bold </h4>
             <h5>welcome to Irise defult css - font - size - 10 font-weight - bold </h5>
             <h6>welcome to Irise defult css - font - size - 8 font-weight - bold </h6>
-            <p style="color  : red; background-color: blue; font-family:sans-serif; font-size: 22px; text-align: center; '
-            This is a paragraph tag. <br />
+            <p style="color  : red"; background-color: blue; font-family:sans-serif; font-size: 22px; text-align: center; '
+            This is a paragraph tag.<br />
             is self closing tag.<br />
             This is a paragraph
             tag.<br />This is a paragraph tag.<br /> This is a paragraph tag.<br />This is a paragraph tag.<br />This is a paragraph tag.<br /> This is a paragraph tag.<br /> This is a paragraph tag. end </p>
