--- a/priya1/priya6.html
+++ b/priya1/priya6.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-     <title> Day 6 Table</title>
+        <h1>day 6 table</h1>
      <style>
      table,td {
         border: 1px solid; black;
