--- a/priya1/priya6.html
+++ b/priya1/priya6.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <h1>day 6 table</h1>
+        <h1> table</h1>
      <style>
      table,td {
         border: 1px solid; black;
