--- a/Day7/day7.html
+++ b/Day7/day7.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title> home</title>
 
     </head>
-    
+    <body>
+        <h1>welcome</h1>
+        </body>
+        </html>
