--- a/D11/D11.html
+++ b/D11/D11.html
@@ -42,19 +42,19 @@
             <img style="width: 30%; height: 300px;" src="/images/wallpaperflare.com_wallpaper.jpg" />
         </div>
         <div style="margin: 30px;">
-            <h1>Priyanka Bramhane</h1>
+            <h1>Name:Priyanka Bramhane</h1>
         </div>
 
         <div style="margin: 30px;">
         
         </div>
+        <div>
             <h1>Contact Details</h1>
             <ul>
                 <li style="font-size: 20px;">Contact No - 7766554489</li>
                 <li style="font-size: 20px;">Email - priya@gmail.com/li>
                 <li style="font-size: 20px;">Address - Pune</li>
-                <li style="font-size: 20px;"><a href="https://github.com/priyahsi">Github -
-                        https://github.com/priyahsi</a></li>
+                <li style="font-size: 20px;"><a href="https://github.com/priyahsi">Github -https://github.com/priyahsi</a></li>
                 <li style="font-size: 20px;">Linkedin - https://linkedin.com/priyankabramhane</li>
             </ul>
         </div>
@@ -70,14 +70,14 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>2021</td>
-                        <td>B.SC</td>
-                        <td>70%</td>
+                        <td>2016</td>
+                        <td>SSC</td>
+                        <td>80%</td>
                     </tr>
                     <tr>
-                        <td>2023</td>
-                        <td>M.SC</td>
-                        <td>85%</td>
+                        <td>2018</td>
+                        <td>HSC</td>
+                        <td>70%</td>
                     </tr>
                 </tbody>
             </table>
@@ -111,22 +111,18 @@
         <div style="margin: 30px;">
             <h1>Technical Skills</h1>
             <ol>
-                <li>React</li>
-                <li>Express</li>
                 <li>JavaScript</li>
-                <li>MongoDb</li>
-                <li>Mysql</li>
                 <li>HTML</li>
                 <li>CSS</li>
             </ol>
         </div>
-        <div style="width: 100%; height: 300px; border: 5px solid purple; text-align: center;">
+        <div style="width: 100%; height: 300px; border: 5px solid red; text-align: center;">
             <h1 style="margin: 20px; font-size: 40px;">Connect with Me</h1>
             <textarea autofocus rows="4" style="width: 500px; margin: 10px;" type="text"
                 placeholder="Type your message.."></textarea> <br />
             <input style="width: 350px;margin: 10px;" type="email" placeholder="Type your email.." /><br />
             <button onclick="alert('Message Sent successfully.')"
-                style="width: 200px;margin: 10px; height: 50px;">Send</button>
+                style="width: 200px ; margin: 10px ; height: 50px ;">Send</button>
         </div>
 
     </div>
